# utilitybot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
bot/: __main__.py
bot/apis/: __init__.py  abc.py  dictionary.py
bot/backend/: __init__.py  abc.py  anime.py  dictionary.py  exceptions.py  models.py  notes.py  reminders.py  suggestions.py
bot/backend/apis/: abc.py  crypto.py  dictionary.py  music.py
bot/commands/: anime.py  crypto.py  dictionary.py  eval.py  issue_linking.py  music.py  recommend.py  reminders.py  rolename.py  starboard.py  suggest.py  weeb.py
bot/internal/: bot.py  context.py
bot/migrations/: 0001_init.sql  0002_alter_user_content.sql  0003_on_delete_cascade_fkeys.sql  MIGRATIONS.md  init_0001.sql
bot/slash_commands/: __init__.py  dictionary.py  reminders.py  sugges.py  suggest.py
bot/utils/: __init__.py  constants.py  converters.py  pagination.py
