[tool.poetry]
name = "utilitybot"
version = "0.1.0"
description = "A Discord slash command based utility bot."
authors = ["Anand Krishna <anandkrishna2312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.2"
discord-py-slash-command = "^1.1.2"
loguru = "^0.5.3"
jishaku = "^1.20.0"
aioscheduler = "^1.4.2"
python-decouple = "^3.4"
asyncpg = "^0.23.0"
discord-ext-menus = {git = "https://github.com/rapptz/discord-ext-menus"}

[tool.poetry.dev-dependencies]
black = "^21.4b2"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
